include/El/blas_like/level1.h

/* EntrywiseFill
   ============= */
EL_EXPORT ElError ElEntrywiseFill_i( ElMatrix_i A, ElInt (*fill)() );
EL_EXPORT ElError ElEntrywiseFill_s( ElMatrix_s A, float (*fill)() );
EL_EXPORT ElError ElEntrywiseFill_d( ElMatrix_d A, double (*fill)() );
EL_EXPORT ElError ElEntrywiseFill_c( ElMatrix_c A, complex_float (*fill)() );
EL_EXPORT ElError ElEntrywiseFill_z( ElMatrix_z A, complex_double (*fill)() );
EL_EXPORT ElError ElEntrywiseFillDist_i
( ElDistMatrix_i A, ElInt (*fill)() );
EL_EXPORT ElError ElEntrywiseFillDist_s
( ElDistMatrix_s A, float (*fill)() );
EL_EXPORT ElError ElEntrywiseFillDist_d
( ElDistMatrix_d A, double (*fill)() );
EL_EXPORT ElError ElEntrywiseFillDist_c
( ElDistMatrix_c A, complex_float (*fill)() );
EL_EXPORT ElError ElEntrywiseFillDist_z
( ElDistMatrix_z A, complex_double (*fill)() );
EL_EXPORT ElError ElEntrywiseFillDistMultiVec_i
( ElDistMultiVec_i A, ElInt (*fill)() );
EL_EXPORT ElError ElEntrywiseFillDistMultiVec_s
( ElDistMultiVec_s A, float (*fill)() );
EL_EXPORT ElError ElEntrywiseFillDistMultiVec_d
( ElDistMultiVec_d A, double (*fill)() );
EL_EXPORT ElError ElEntrywiseFillDistMultiVec_c
( ElDistMultiVec_c A, complex_float (*fill)() );
EL_EXPORT ElError ElEntrywiseFillDistMultiVec_z
( ElDistMultiVec_z A, complex_double (*fill)() );
/* EntrywiseMap
   ============ */
EL_EXPORT ElError ElEntrywiseMap_i
( ElMatrix_i A, ElInt (*func)(ElInt) );
EL_EXPORT ElError ElEntrywiseMap_s
( ElMatrix_s A, float (*func)(float) );
EL_EXPORT ElError ElEntrywiseMap_d
( ElMatrix_d A, double (*func)(double) );
EL_EXPORT ElError ElEntrywiseMap_c
( ElMatrix_c A, complex_float (*func)(complex_float) );
EL_EXPORT ElError ElEntrywiseMap_z
( ElMatrix_z A, complex_double (*func)(complex_double) );
EL_EXPORT ElError ElEntrywiseMapDist_i
( ElDistMatrix_i A, ElInt (*func)(ElInt) );
EL_EXPORT ElError ElEntrywiseMapDist_s
( ElDistMatrix_s A, float (*func)(float) );
EL_EXPORT ElError ElEntrywiseMapDist_d
( ElDistMatrix_d A, double (*func)(double) );
EL_EXPORT ElError ElEntrywiseMapDist_c
( ElDistMatrix_c A, complex_float (*func)(complex_float) );
EL_EXPORT ElError ElEntrywiseMapDist_z
( ElDistMatrix_z A, complex_double (*func)(complex_double) );
EL_EXPORT ElError ElEntrywiseMapSparse_i
( ElSparseMatrix_i A, ElInt (*func)(ElInt) );
EL_EXPORT ElError ElEntrywiseMapSparse_s
( ElSparseMatrix_s A, float (*func)(float) );
EL_EXPORT ElError ElEntrywiseMapSparse_d
( ElSparseMatrix_d A, double (*func)(double) );
EL_EXPORT ElError ElEntrywiseMapSparse_c
( ElSparseMatrix_c A, complex_float (*func)(complex_float) );
EL_EXPORT ElError ElEntrywiseMapSparse_z
( ElSparseMatrix_z A, complex_double (*func)(complex_double) );
EL_EXPORT ElError ElEntrywiseMapDistSparse_i
( ElDistSparseMatrix_i A, ElInt (*func)(ElInt) );
EL_EXPORT ElError ElEntrywiseMapDistSparse_s
( ElDistSparseMatrix_s A, float (*func)(float) );
EL_EXPORT ElError ElEntrywiseMapDistSparse_d
( ElDistSparseMatrix_d A, double (*func)(double) );
EL_EXPORT ElError ElEntrywiseMapDistSparse_c
( ElDistSparseMatrix_c A, complex_float (*func)(complex_float) );
EL_EXPORT ElError ElEntrywiseMapDistSparse_z
( ElDistSparseMatrix_z A, complex_double (*func)(complex_double) );
EL_EXPORT ElError ElEntrywiseMapDistMultiVec_i
( ElDistMultiVec_i A, ElInt (*func)(ElInt) );
EL_EXPORT ElError ElEntrywiseMapDistMultiVec_s
( ElDistMultiVec_s A, float (*func)(float) );
EL_EXPORT ElError ElEntrywiseMapDistMultiVec_d
( ElDistMultiVec_d A, double (*func)(double) );
EL_EXPORT ElError ElEntrywiseMapDistMultiVec_c
( ElDistMultiVec_c A, complex_float (*func)(complex_float) );
EL_EXPORT ElError ElEntrywiseMapDistMultiVec_z
( ElDistMultiVec_z A, complex_double (*func)(complex_double) );
/* TODO: Version which maps to a different matrix of possibly different type? */

/* Fill
   ==== */
EL_EXPORT ElError ElFill_i( ElMatrix_i A, ElInt alpha );
EL_EXPORT ElError ElFill_s( ElMatrix_s A, float alpha );
EL_EXPORT ElError ElFill_d( ElMatrix_d A, double alpha );
EL_EXPORT ElError ElFill_c( ElMatrix_c A, complex_float alpha );
EL_EXPORT ElError ElFill_z( ElMatrix_z A, complex_double alpha );
EL_EXPORT ElError ElFillDist_i( ElDistMatrix_i A, ElInt alpha );
EL_EXPORT ElError ElFillDist_s( ElDistMatrix_s A, float alpha );
EL_EXPORT ElError ElFillDist_d( ElDistMatrix_d A, double alpha );
EL_EXPORT ElError ElFillDist_c( ElDistMatrix_c A, complex_float alpha );
EL_EXPORT ElError ElFillDist_z( ElDistMatrix_z A, complex_double alpha );
EL_EXPORT ElError ElFillDistMultiVec_i
( ElDistMultiVec_i A, ElInt alpha );
EL_EXPORT ElError ElFillDistMultiVec_s
( ElDistMultiVec_s A, float alpha );
EL_EXPORT ElError ElFillDistMultiVec_d
( ElDistMultiVec_d A, double alpha );
EL_EXPORT ElError ElFillDistMultiVec_c
( ElDistMultiVec_c A, complex_float alpha );
EL_EXPORT ElError ElFillDist_z
( ElDistMatrix_z A, complex_double alpha );
EL_EXPORT ElError ElFillSparse_i( ElSparseMatrix_i, ElInt alpha );
EL_EXPORT ElError ElFillSparse_s( ElSparseMatrix_s, float alpha );
EL_EXPORT ElError ElFillSparse_d( ElSparseMatrix_d, double alpha );
EL_EXPORT ElError ElFillSparse_c( ElSparseMatrix_c, complex_float alpha );
EL_EXPORT ElError ElFillSparse_z( ElSparseMatrix_z, complex_double alpha );
EL_EXPORT ElError ElFillDistSparse_i
( ElDistSparseMatrix_i, ElInt alpha );
EL_EXPORT ElError ElFillDistSparse_s
( ElDistSparseMatrix_s, float alpha );
EL_EXPORT ElError ElFillDistSparse_d
( ElDistSparseMatrix_d, double alpha );
EL_EXPORT ElError ElFillDistSparse_c
( ElDistSparseMatrix_c, complex_float alpha );
EL_EXPORT ElError ElFillDistSparse_z
( ElDistSparseMatrix_z, complex_double alpha );
/* FillDiagonal
   =========== */
EL_EXPORT ElError ElFillDiagonal_i
( ElMatrix_i A, ElInt alpha, ElInt offset );
EL_EXPORT ElError ElFillDiagonal_s
( ElMatrix_s A, float alpha, ElInt offset );
EL_EXPORT ElError ElFillDiagonal_d
( ElMatrix_d A, double alpha, ElInt offset );
EL_EXPORT ElError ElFillDiagonal_c
( ElMatrix_c A, complex_float alpha, ElInt offset );
EL_EXPORT ElError ElFillDiagonal_z
( ElMatrix_z A, complex_double alpha, ElInt offset );
EL_EXPORT ElError ElFillDiagonalDist_i
( ElDistMatrix_i A, ElInt alpha, ElInt offset );
EL_EXPORT ElError ElFillDiagonalDist_s
( ElDistMatrix_s A, float alpha, ElInt offset );
EL_EXPORT ElError ElFillDiagonalDist_d
( ElDistMatrix_d A, double alpha, ElInt offset );
EL_EXPORT ElError ElFillDiagonalDist_c
( ElDistMatrix_c A, complex_float alpha, ElInt offset );
EL_EXPORT ElError ElFillDiagonalDist_z
( ElDistMatrix_z A, complex_double alpha, ElInt offset );
/* Full
   ==== */
EL_EXPORT ElError ElFull_i( ElConstSparseMatrix_i A, ElMatrix_i B );
EL_EXPORT ElError ElFull_s( ElConstSparseMatrix_s A, ElMatrix_s B );
EL_EXPORT ElError ElFull_d( ElConstSparseMatrix_d A, ElMatrix_d B );
EL_EXPORT ElError ElFull_c( ElConstSparseMatrix_c A, ElMatrix_c B );
EL_EXPORT ElError ElFull_z( ElConstSparseMatrix_z A, ElMatrix_z B );
EL_EXPORT ElError ElFullDist_i( ElConstDistSparseMatrix_i A, ElDistMatrix_i B );
EL_EXPORT ElError ElFullDist_s( ElConstDistSparseMatrix_s A, ElDistMatrix_s B );
EL_EXPORT ElError ElFullDist_d( ElConstDistSparseMatrix_d A, ElDistMatrix_d B );
EL_EXPORT ElError ElFullDist_c( ElConstDistSparseMatrix_c A, ElDistMatrix_c B );
EL_EXPORT ElError ElFullDist_z( ElConstDistSparseMatrix_z A, ElDistMatrix_z B );
/* GetDiagonal
   =========== */
/* TODO */

/* GetMappedDiagonal
   ================= */
/* TODO */

/* GetSubgraph
   =========== */
EL_EXPORT ElError ElGetSubgraph
( ElConstGraph graph, ElRange_i iRange, ElRange_i jRange, 
  ElGraph subgraph );
EL_EXPORT ElError ElGetSubgraphDist
( ElConstDistGraph graph, ElRange_i iRange, ElRange_i jRange, 
  ElDistGraph subgraph );
/* GetSubmatrix
   ============ */

/* Contiguous
   ---------- */
EL_EXPORT ElError ElGetContigSubmatrix_i
( ElConstMatrix_i A, ElRange_i iRange, ElRange_i jRange,
  ElMatrix_i ASub );
EL_EXPORT ElError ElGetContigSubmatrix_s
( ElConstMatrix_s A, ElRange_i iRange, ElRange_i jRange,
  ElMatrix_s ASub );
EL_EXPORT ElError ElGetContigSubmatrix_d
( ElConstMatrix_d A, ElRange_i iRange, ElRange_i jRange,
  ElMatrix_d ASub );
EL_EXPORT ElError ElGetContigSubmatrix_c
( ElConstMatrix_c A, ElRange_i iRange, ElRange_i jRange,
  ElMatrix_c ASub );
EL_EXPORT ElError ElGetContigSubmatrix_z
( ElConstMatrix_z A, ElRange_i iRange, ElRange_i jRange,
  ElMatrix_z ASub );
EL_EXPORT ElError ElGetContigSubmatrixDist_i
( ElConstDistMatrix_i A, ElRange_i iRange, ElRange_i jRange,
  ElDistMatrix_i ASub );
EL_EXPORT ElError ElGetContigSubmatrixDist_s
( ElConstDistMatrix_s A, ElRange_i iRange, ElRange_i jRange,
  ElDistMatrix_s ASub );
EL_EXPORT ElError ElGetContigSubmatrixDist_d
( ElConstDistMatrix_d A, ElRange_i iRange, ElRange_i jRange,
  ElDistMatrix_d ASub );
EL_EXPORT ElError ElGetContigSubmatrixDist_c
( ElConstDistMatrix_c A, ElRange_i iRange, ElRange_i jRange,
  ElDistMatrix_c ASub );
EL_EXPORT ElError ElGetContigSubmatrixDist_z
( ElConstDistMatrix_z A, ElRange_i iRange, ElRange_i jRange,
  ElDistMatrix_z ASub );
EL_EXPORT ElError ElGetContigSubmatrixSparse_i
( ElConstSparseMatrix_i A, ElRange_i iRange, ElRange_i jRange,
  ElSparseMatrix_i ASub );
EL_EXPORT ElError ElGetContigSubmatrixSparse_s
( ElConstSparseMatrix_s A, ElRange_i iRange, ElRange_i jRange,
  ElSparseMatrix_s ASub );
EL_EXPORT ElError ElGetContigSubmatrixSparse_d
( ElConstSparseMatrix_d A, ElRange_i iRange, ElRange_i jRange,
  ElSparseMatrix_d ASub );
EL_EXPORT ElError ElGetContigSubmatrixSparse_c
( ElConstSparseMatrix_c A, ElRange_i iRange, ElRange_i jRange,
  ElSparseMatrix_c ASub );
EL_EXPORT ElError ElGetContigSubmatrixSparse_z
( ElConstSparseMatrix_z A, ElRange_i iRange, ElRange_i jRange,
  ElSparseMatrix_z ASub );
EL_EXPORT ElError ElGetContigSubmatrixDistSparse_i
( ElConstDistSparseMatrix_i A, ElRange_i iRange, ElRange_i jRange,
  ElDistSparseMatrix_i ASub );
EL_EXPORT ElError ElGetContigSubmatrixDistSparse_s
( ElConstDistSparseMatrix_s A, ElRange_i iRange, ElRange_i jRange,
  ElDistSparseMatrix_s ASub );
EL_EXPORT ElError ElGetContigSubmatrixDistSparse_d
( ElConstDistSparseMatrix_d A, ElRange_i iRange, ElRange_i jRange,
  ElDistSparseMatrix_d ASub );
EL_EXPORT ElError ElGetContigSubmatrixDistSparse_c
( ElConstDistSparseMatrix_c A, ElRange_i iRange, ElRange_i jRange,
  ElDistSparseMatrix_c ASub );
EL_EXPORT ElError ElGetContigSubmatrixDistSparse_z
( ElConstDistSparseMatrix_z A, ElRange_i iRange, ElRange_i jRange,
  ElDistSparseMatrix_z ASub );
EL_EXPORT ElError ElGetContigSubmatrixDistMultiVec_i
( ElConstDistMultiVec_i A, ElRange_i iRange, ElRange_i jRange,
  ElDistMultiVec_i ASub );
EL_EXPORT ElError ElGetContigSubmatrixDistMultiVec_s
( ElConstDistMultiVec_s A, ElRange_i iRange, ElRange_i jRange,
  ElDistMultiVec_s ASub );
EL_EXPORT ElError ElGetContigSubmatrixDistMultiVec_d
( ElConstDistMultiVec_d A, ElRange_i iRange, ElRange_i jRange,
  ElDistMultiVec_d ASub );
EL_EXPORT ElError ElGetContigSubmatrixDistMultiVec_c
( ElConstDistMultiVec_c A, ElRange_i iRange, ElRange_i jRange,
  ElDistMultiVec_c ASub );
EL_EXPORT ElError ElGetContigSubmatrixDistMultiVec_z
( ElConstDistMultiVec_z A, ElRange_i iRange, ElRange_i jRange,
  ElDistMultiVec_z ASub );
/* TODO: Sparse versions */

/* IndexDependentFill
   ================== */
EL_EXPORT ElError ElIndexDependentFill_i
( ElMatrix_i A, ElInt (*fill)(ElInt,ElInt) );
EL_EXPORT ElError ElIndexDependentFill_s
( ElMatrix_s A, float (*fill)(ElInt,ElInt) );
EL_EXPORT ElError ElIndexDependentFill_d
( ElMatrix_d A, double (*fill)(ElInt,ElInt) );
EL_EXPORT ElError ElIndexDependentFill_c
( ElMatrix_c A, complex_float (*fill)(ElInt,ElInt) );
EL_EXPORT ElError ElIndexDependentFill_z
( ElMatrix_z A, complex_double (*fill)(ElInt,ElInt) );
EL_EXPORT ElError ElIndexDependentFillDist_i
( ElDistMatrix_i A, ElInt (*fill)(ElInt,ElInt) );
EL_EXPORT ElError ElIndexDependentFillDist_s
( ElDistMatrix_s A, float (*fill)(ElInt,ElInt) );
EL_EXPORT ElError ElIndexDependentFillDist_d
( ElDistMatrix_d A, double (*fill)(ElInt,ElInt) );
EL_EXPORT ElError ElIndexDependentFillDist_c
( ElDistMatrix_c A, complex_float (*fill)(ElInt,ElInt) );
EL_EXPORT ElError ElIndexDependentFillDist_z
( ElDistMatrix_z A, complex_double (*fill)(ElInt,ElInt) );