python/blas_like/level1.py


# Entrywise fill
# --------------
lib.ElEntrywiseFill_i.argtypes = \
lib.ElEntrywiseFillDist_i.argtypes = \
lib.ElEntrywiseFillDistMultiVec_i.argtypes = \
  [c_void_p,CFUNCTYPE(iType)]

lib.ElEntrywiseFill_s.argtypes = \
lib.ElEntrywiseFillDist_s.argtypes = \
lib.ElEntrywiseFillDistMultiVec_s.argtypes = \
  [c_void_p,CFUNCTYPE(sType)]

lib.ElEntrywiseFill_d.argtypes = \
lib.ElEntrywiseFillDist_d.argtypes = \
lib.ElEntrywiseFillDistMultiVec_d.argtypes = \
  [c_void_p,CFUNCTYPE(dType)]

lib.ElEntrywiseFill_c.argtypes = \
lib.ElEntrywiseFillDist_c.argtypes = \
lib.ElEntrywiseFillDistMultiVec_c.argtypes = \
  [c_void_p,CFUNCTYPE(cType)]

lib.ElEntrywiseFill_z.argtypes = \
lib.ElEntrywiseFillDist_z.argtypes = \
lib.ElEntrywiseFillDistMultiVec_z.argtypes = \
  [c_void_p,CFUNCTYPE(zType)]

def EntrywiseFill(A,fill):
  cFill = CFUNCTYPE(TagToType(A.tag))(fill)
  args = [A.obj,cFill]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElEntrywiseFill_i(*args)
    elif A.tag == sTag: lib.ElEntrywiseFill_s(*args)
    elif A.tag == dTag: lib.ElEntrywiseFill_d(*args)
    elif A.tag == cTag: lib.ElEntrywiseFill_c(*args)
    elif A.tag == zTag: lib.ElEntrywiseFill_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElEntrywiseFillDist_i(*args)
    elif A.tag == sTag: lib.ElEntrywiseFillDist_s(*args)
    elif A.tag == dTag: lib.ElEntrywiseFillDist_d(*args)
    elif A.tag == cTag: lib.ElEntrywiseFillDist_c(*args)
    elif A.tag == zTag: lib.ElEntrywiseFillDist_z(*args)
    else: DataExcept()
  elif type(A) is DistMultiVec:
    if   A.tag == iTag: lib.ElEntrywiseFillDistMultiVec_i(*args)
    elif A.tag == sTag: lib.ElEntrywiseFillDistMultiVec_s(*args)
    elif A.tag == dTag: lib.ElEntrywiseFillDistMultiVec_d(*args)
    elif A.tag == cTag: lib.ElEntrywiseFillDistMultiVec_c(*args)
    elif A.tag == zTag: lib.ElEntrywiseFillDistMultiVec_z(*args)
    else: DataExcept()
  else: TypeExcept()

# Entrywise map
# -------------
lib.ElEntrywiseMap_i.argtypes = \
lib.ElEntrywiseMapDist_i.argtypes = \
lib.ElEntrywiseMapSparse_i.argtypes = \
lib.ElEntrywiseMapDistSparse_i.argtypes = \
lib.ElEntrywiseMapDistMultiVec_i.argtypes = \
  [c_void_p,CFUNCTYPE(iType,iType)]

lib.ElEntrywiseMap_s.argtypes = \
lib.ElEntrywiseMapDist_s.argtypes = \
lib.ElEntrywiseMapSparse_s.argtypes = \
lib.ElEntrywiseMapDistSparse_s.argtypes = \
lib.ElEntrywiseMapDistMultiVec_s.argtypes = \
  [c_void_p,CFUNCTYPE(sType,sType)]

lib.ElEntrywiseMap_d.argtypes = \
lib.ElEntrywiseMapDist_d.argtypes = \
lib.ElEntrywiseMapSparse_d.argtypes = \
lib.ElEntrywiseMapDistSparse_d.argtypes = \
lib.ElEntrywiseMapDistMultiVec_d.argtypes = \
  [c_void_p,CFUNCTYPE(dType,dType)]

lib.ElEntrywiseMap_c.argtypes = \
lib.ElEntrywiseMapDist_c.argtypes = \
lib.ElEntrywiseMapSparse_c.argtypes = \
lib.ElEntrywiseMapDistSparse_c.argtypes = \
lib.ElEntrywiseMapDistMultiVec_c.argtypes = \
  [c_void_p,CFUNCTYPE(cType,cType)]

lib.ElEntrywiseMap_z.argtypes = \
lib.ElEntrywiseMapDist_z.argtypes = \
lib.ElEntrywiseMapSparse_z.argtypes = \
lib.ElEntrywiseMapDistSparse_z.argtypes = \
lib.ElEntrywiseMapDistMultiVec_z.argtypes = \
  [c_void_p,CFUNCTYPE(zType,zType)]

def EntrywiseMap(A,mapFunc):
  cMap = CFUNCTYPE(TagToType(A.tag),TagToType(A.tag))(mapFunc)
  args = [A.obj,cMap]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElEntrywiseMap_i(*args)
    elif A.tag == sTag: lib.ElEntrywiseMap_s(*args)
    elif A.tag == dTag: lib.ElEntrywiseMap_d(*args)
    elif A.tag == cTag: lib.ElEntrywiseMap_c(*args)
    elif A.tag == zTag: lib.ElEntrywiseMap_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElEntrywiseMapDist_i(*args)
    elif A.tag == sTag: lib.ElEntrywiseMapDist_s(*args)
    elif A.tag == dTag: lib.ElEntrywiseMapDist_d(*args)
    elif A.tag == cTag: lib.ElEntrywiseMapDist_c(*args)
    elif A.tag == zTag: lib.ElEntrywiseMapDist_z(*args)
    else: DataExcept()
  elif type(A) is SparseMatrix:
    if   A.tag == iTag: lib.ElEntrywiseMapSparse_i(*args)
    elif A.tag == sTag: lib.ElEntrywiseMapSparse_s(*args)
    elif A.tag == dTag: lib.ElEntrywiseMapSparse_d(*args)
    elif A.tag == cTag: lib.ElEntrywiseMapSparse_c(*args)
    elif A.tag == zTag: lib.ElEntrywiseMapSparse_z(*args)
    else: DataExcept()
  elif type(A) is DistSparseMatrix:
    if   A.tag == iTag: lib.ElEntrywiseMapDistSparse_i(*args)
    elif A.tag == sTag: lib.ElEntrywiseMapDistSparse_s(*args)
    elif A.tag == dTag: lib.ElEntrywiseMapDistSparse_d(*args)
    elif A.tag == cTag: lib.ElEntrywiseMapDistSparse_c(*args)
    elif A.tag == zTag: lib.ElEntrywiseMapDistSparse_z(*args)
    else: DataExcept()
  elif type(A) is DistMultiVec:
    if   A.tag == iTag: lib.ElEntrywiseMapDistMultiVec_i(*args)
    elif A.tag == sTag: lib.ElEntrywiseMapDistMultiVec_s(*args)
    elif A.tag == dTag: lib.ElEntrywiseMapDistMultiVec_d(*args)
    elif A.tag == cTag: lib.ElEntrywiseMapDistMultiVec_c(*args)
    elif A.tag == zTag: lib.ElEntrywiseMapDistMultiVec_z(*args)
    else: DataExcept()
  else: TypeExcept()

# Fill
# ----
lib.ElFill_i.argtypes = \
lib.ElFillDist_i.argtypes = \
lib.ElFillDistMultiVec_i.argtypes = \
lib.ElFillSparse_i.argtypes = \
lib.ElFillDistSparse_i.argtypes = \
  [c_void_p,iType]

lib.ElFill_s.argtypes = \
lib.ElFillDist_s.argtypes = \
lib.ElFillDistMultiVec_s.argtypes = \
lib.ElFillSparse_s.argtypes = \
lib.ElFillDistSparse_s.argtypes = \
  [c_void_p,sType]

lib.ElFill_d.argtypes = \
lib.ElFillDist_d.argtypes = \
lib.ElFillDistMultiVec_d.argtypes = \
lib.ElFillSparse_d.argtypes = \
lib.ElFillDistSparse_d.argtypes = \
  [c_void_p,dType]

lib.ElFill_c.argtypes = \
lib.ElFillDist_c.argtypes = \
lib.ElFillDistMultiVec_c.argtypes = \
lib.ElFillSparse_c.argtypes = \
lib.ElFillDistSparse_c.argtypes = \
  [c_void_p,cType]

lib.ElFill_z.argtypes = \
lib.ElFillDist_z.argtypes = \
lib.ElFillDistMultiVec_z.argtypes = \
lib.ElFillSparse_z.argtypes = \
lib.ElFillDistSparse_z.argtypes = \
  [c_void_p,zType]

def Fill(A,alphaPre):
  alpha = TagToType(A.tag)(alphaPre)
  args = [A.obj,alpha]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElFill_i(*args)
    elif A.tag == sTag: lib.ElFill_s(*args)
    elif A.tag == dTag: lib.ElFill_d(*args)
    elif A.tag == cTag: lib.ElFill_c(*args)
    elif A.tag == zTag: lib.ElFill_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElFillDist_i(*args)
    elif A.tag == sTag: lib.ElFillDist_s(*args)
    elif A.tag == dTag: lib.ElFillDist_d(*args)
    elif A.tag == cTag: lib.ElFillDist_c(*args)
    elif A.tag == zTag: lib.ElFillDist_z(*args)
    else: DataExcept()
  elif type(A) is DistMultiVec:
    if   A.tag == iTag: lib.ElFillDistMultiVec_i(*args)
    elif A.tag == sTag: lib.ElFillDistMultiVec_s(*args)
    elif A.tag == dTag: lib.ElFillDistMultiVec_d(*args)
    elif A.tag == cTag: lib.ElFillDistMultiVec_c(*args)
    elif A.tag == zTag: lib.ElFillDistMultiVec_z(*args)
    else: DataExcept()
  elif type(A) is SparseMatrix:
    if   A.tag == iTag: lib.ElFillSparse_i(*args)
    elif A.tag == sTag: lib.ElFillSparse_s(*args)
    elif A.tag == dTag: lib.ElFillSparse_d(*args)
    elif A.tag == cTag: lib.ElFillSparse_c(*args)
    elif A.tag == zTag: lib.ElFillSparse_z(*args)
    else: DataExcept()
  elif type(A) is DistSparseMatrix:
    if   A.tag == iTag: lib.ElFillDistSparse_i(*args)
    elif A.tag == sTag: lib.ElFillDistSparse_s(*args)
    elif A.tag == dTag: lib.ElFillDistSparse_d(*args)
    elif A.tag == cTag: lib.ElFillDistSparse_c(*args)
    elif A.tag == zTag: lib.ElFillDistSparse_z(*args)
    else: DataExcept()
  else: TypeExcept()

# Fill diagonal
# ------------
lib.ElFillDiagonal_i.argtypes = \
lib.ElFillDiagonalDist_i.argtypes = \
  [c_void_p,iType,iType]

lib.ElFillDiagonal_s.argtypes = \
lib.ElFillDiagonalDist_s.argtypes = \
  [c_void_p,sType,iType]

lib.ElFillDiagonal_d.argtypes = \
lib.ElFillDiagonalDist_d.argtypes = \
  [c_void_p,dType,iType]

lib.ElFillDiagonal_c.argtypes = \
lib.ElFillDiagonalDist_c.argtypes = \
  [c_void_p,cType,iType]

lib.ElFillDiagonal_z.argtypes = \
lib.ElFillDiagonalDist_z.argtypes = \
  [c_void_p,zType,iType]

def FillDiagonal(A,alphaPre,offset=0):
  alpha = TagToType(A.tag)(alphaPre)
  args = [A.obj,alpha,offset]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElFillDiagonal_i(*args)
    elif A.tag == sTag: lib.ElFillDiagonal_s(*args)
    elif A.tag == dTag: lib.ElFillDiagonal_d(*args)
    elif A.tag == cTag: lib.ElFillDiagonal_c(*args)
    elif A.tag == zTag: lib.ElFillDiagonal_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElFillDiagonalDist_i(*args)
    elif A.tag == sTag: lib.ElFillDiagonalDist_s(*args)
    elif A.tag == dTag: lib.ElFillDiagonalDist_d(*args)
    elif A.tag == cTag: lib.ElFillDiagonalDist_c(*args)
    elif A.tag == zTag: lib.ElFillDiagonalDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

# Full
# ----
lib.ElFull_i.argtypes = \
lib.ElFull_s.argtypes = \
lib.ElFull_d.argtypes = \
lib.ElFull_c.argtypes = \
lib.ElFull_z.argtypes = \
lib.ElFullDist_i.argtypes = \
lib.ElFullDist_s.argtypes = \
lib.ElFullDist_d.argtypes = \
lib.ElFullDist_c.argtypes = \
lib.ElFullDist_z.argtypes = \
  [c_void_p,c_void_p]

def Full(A,B):
  if A.tag != B.tag: 
    raise Exception("Expected A and B to have the same datatype")
  args = [A.obj,B.obj]
  if type(A) is SparseMatrix:
    if type(B) is not Matrix:
      raise Exception("Expected B to be a Matrix")
    if   A.tag == iTag: lib.ElFull_i(*args)
    elif A.tag == sTag: lib.ElFull_s(*args)
    elif A.tag == dTag: lib.ElFull_d(*args)
    elif A.tag == cTag: lib.ElFull_c(*args)
    elif A.tag == zTag: lib.ElFull_z(*args)
    else: DataExcept()
  elif type(A) is DistSparseMatrix:
    if type(B) is not DistMatrix:
      raise Exception("Expected B to be a DistMatrix")
    if   A.tag == iTag: lib.ElFullDist_i(*args)
    elif A.tag == sTag: lib.ElFullDist_s(*args)
    elif A.tag == dTag: lib.ElFullDist_d(*args)
    elif A.tag == cTag: lib.ElFullDist_c(*args)
    elif A.tag == zTag: lib.ElFullDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

# Get diagonal
# ------------
# TODO

# Get subgraph
# ------------
lib.ElGetSubgraph.argtypes = \
lib.ElGetSubgraphDist.argtypes = \
  [c_void_p,IndexRange,IndexRange,c_void_p]

def GetSubgraph(graph,I,J):
  if type(graph) is Graph:
    subgraph = Graph()
    lib.ElGetSubgraph(graph.obj,I,J,subgraph.obj)
    return subgraph
  elif type(graph) is DistGraph:
    subgraph = DistGraph(graph.Grid())
    lib.ElGetSubgraphDist(graph.obj,I,J,subgraph.obj)
    return subgraph
  else: TypeExcept()

# Get submatrix
# -------------
lib.ElGetContigSubmatrix_i.argtypes = \
lib.ElGetContigSubmatrix_s.argtypes = \
lib.ElGetContigSubmatrix_d.argtypes = \
lib.ElGetContigSubmatrix_c.argtypes = \
lib.ElGetContigSubmatrix_z.argtypes = \
lib.ElGetContigSubmatrixDist_i.argtypes = \
lib.ElGetContigSubmatrixDist_s.argtypes = \
lib.ElGetContigSubmatrixDist_d.argtypes = \
lib.ElGetContigSubmatrixDist_c.argtypes = \
lib.ElGetContigSubmatrixDist_z.argtypes = \
lib.ElGetContigSubmatrixSparse_i.argtypes = \
lib.ElGetContigSubmatrixSparse_s.argtypes = \
lib.ElGetContigSubmatrixSparse_d.argtypes = \
lib.ElGetContigSubmatrixSparse_c.argtypes = \
lib.ElGetContigSubmatrixSparse_z.argtypes = \
lib.ElGetContigSubmatrixDistSparse_i.argtypes = \
lib.ElGetContigSubmatrixDistSparse_s.argtypes = \
lib.ElGetContigSubmatrixDistSparse_d.argtypes = \
lib.ElGetContigSubmatrixDistSparse_c.argtypes = \
lib.ElGetContigSubmatrixDistSparse_z.argtypes = \
lib.ElGetContigSubmatrixDistMultiVec_i.argtypes = \
lib.ElGetContigSubmatrixDistMultiVec_s.argtypes = \
lib.ElGetContigSubmatrixDistMultiVec_d.argtypes = \
lib.ElGetContigSubmatrixDistMultiVec_c.argtypes = \
lib.ElGetContigSubmatrixDistMultiVec_z.argtypes = \
  [c_void_p,IndexRange,IndexRange,c_void_p]
